Minor bug fix for ordering of import statements.
git-svn-id: svn+ssh://barretts.ecs.vuw.ac.nz/vol/projects/elvis-svn/jkit/src@7074 95d365e6-2d05-0410-86de-9ddc6db2c6c8